k8s/manifest/data-pvtest-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: pvtest-pod
spec:
  containers:
  - name: nginx-test01
    image: nginx:latest
    volumeMounts:
    - name: nfs-pv-01
      mountPath: /mount01
  volumes:
  - name: nfs-pv-01
    persistentVolumeClaim:
      claimName: data-pvc
