k8s/manifest/deploy-test02.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-test01
spec:
  replicas: 5
  selector:
    matchLabels:
      application: deploy-nginx
  template:
    metadata:
      labels:
        application: deploy-nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
