k8s/manifest/deploy-test03.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-test01
spec:
  replicas: 3
  selector:
    matchLabels:
      application: deploy-nginx
  template:
    metadata:
      labels:
        application: deploy-nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.24
