k8s/manifest/ingress01-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-deploy-test01
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-deploy01
  template:
    metadata:
      labels:
        app: web-deploy01
    spec:
      containers:
      - name: nginx
        image: nginx:1.25
