k8s/manifest/myclient1.yml
apiVersion: v1
kind: Pod
metadata:
  name: myclient1
  labels:
    app: myclient
spec:
  nodeName: mlteam1
  containers:
  - name: myclient1-c
    image: bitnami/kafka:3.2
    command: ["tail"]
    args: ["-f", "/dev/null"]
