k8s/manifest/ingress01-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress-service-test01
spec:
  selector:
    app: web-deploy01
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
