k8s/manifest/ingress02-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress-service-test02
spec:
  selector:
    app: web-deploy02
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
