k8s/manifest/service-test01.yml
apiVersion: v1
kind: Service
metadata:
  name: service-test01
spec:
  selector:
    application: deploy-nginx
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
