k8s/manifest/service-test02.yml
apiVersion: v1
kind: Service
metadata:
  name: service-test02
spec:
  selector:
    application: deploy-nginx
  type: NodePort
  ports:
  - protocol: TCP
    nodePort: 31001
    port: 80
    targetPort: 80
