k8s/manifest/service-test03.yml
apiVersion: v1
kind: Service
metadata:
  name: service-test03
spec:
  selector:
    application: deploy-nginx
  type: LoadBalancer
  ports:
  - protocol: TCP
    nodePort: 31001
    port: 80
    targetPort: 80
  externalIPs:
  - 3.36.140.156
